test/corpus/control_flow.txt
========
Match statement 
========

func prettyprint() {
    match this {
        case Fahrenheit(f) => {
            return;
        }, 
        case Celsius(c) => {
            return;
        }
    }
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (logic_block
      (control_flow_statement
        (match_statement
          (identifier)
          (match_block
            (match_arm
              (pattern
                (identifier)
                (identifier))
              (logic_block
                (return_statement)))
            (match_arm
              (pattern
                (identifier)
                (identifier))
              (logic_block
                (return_statement)))))))))

========
If statement
========

func prettyprint(a, b) {
    if a {
        println();
    }
    
    if a {
        println();
    } else {
        println();
    }
    
    if a {
        println();
    } elsif b {
        println();
    }
    
    if a {
        println();
    } elsif b {
        println();
    } else {
        println();
    }
}

---

(source_file
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier))
          (ERROR
            (UNEXPECTED 'b')))
        (logic_block
          (control_flow_statement
            (if_statement
              (expression
                (primary_expression
                  (identifier)))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))))
          (control_flow_statement
            (if_statement
              (expression
                (primary_expression
                  (identifier)))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))
              (else_clause
                (logic_block
                  (expression_statement
                    (expression
                      (primary_expression
                        (function_call
                          (identifier)
                          (argument_list)))))))))
          (control_flow_statement
            (if_statement
              (expression
                (primary_expression
                  (identifier)))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))
              (elsif_clause
                (expression
                  (primary_expression
                    (identifier)))
                (logic_block
                  (expression_statement
                    (expression
                      (primary_expression
                        (function_call
                          (identifier)
                          (argument_list)))))))))
          (control_flow_statement
            (if_statement
              (expression
                (primary_expression
                  (identifier)))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))
              (elsif_clause
                (expression
                  (primary_expression
                    (identifier)))
                (logic_block
                  (expression_statement
                    (expression
                      (primary_expression
                        (function_call
                          (identifier)
                          (argument_list)))))))
              (else_clause
                (logic_block
                  (expression_statement
                    (expression
                      (primary_expression
                        (function_call
                          (identifier)
                          (argument_list))))))))))))

=======
For statement
=======

func prettyprint(a) {
    for i in [] {
        println();
    }
    
    for x in [] {
        println();
    } else {
        println();
    }
}

---

    (source_file
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (logic_block
          (control_flow_statement
            (for_statement
              (identifier)
              (expression
                (primary_expression
                  (literal
                    (array))))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))))
          (control_flow_statement
            (for_statement
              (identifier)
              (expression
                (primary_expression
                  (literal
                    (array))))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))
              (else_clause
                (logic_block
                  (expression_statement
                    (expression
                      (primary_expression
                        (function_call
                          (identifier)
                          (argument_list))))))))))))

=======
While statement
=======

func prettyprint(a) {
    while a {
        println();
    }
    
    while a {
        println();
    } else {
        println();
    }
}

---

    (source_file
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (logic_block
          (control_flow_statement
            (while_statement
              (expression
                (primary_expression
                  (identifier)))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))))
          (control_flow_statement
            (while_statement
              (expression
                (primary_expression
                  (identifier)))
              (logic_block
                (expression_statement
                  (expression
                    (primary_expression
                      (function_call
                        (identifier)
                        (argument_list))))))
              (else_clause
                (logic_block
                  (expression_statement
                    (expression
                      (primary_expression
                        (function_call
                          (identifier)
                          (argument_list))))))))))))
