test/corpus/expresions.txt
=========
Enum expression
=========

val a = Result::Ok(42);

---

    (source_file
      (variable_declaration
        (identifier)
        (assignment_operator)
        (expression
          (primary_expression
            (enum_value
              (type
                (identifier))
              (identifier)
              (expression
                (primary_expression
                  (literal
                    (number)))))))))

=========
Force unwrap
=========

val a = b!!;

---

    (source_file
      (variable_declaration
        (identifier)
        (assignment_operator)
        (expression
          (primary_expression
            (expression
              (primary_expression
                (identifier)))
            (suffix_operator)))))
              
