test/corpus/extensions.txt
================
Extension definition
================

extension Foo {
    func add(x) {
        this.x += x;
        return this.x;
    }
}

---
(source_file
(extension_definition
    (identifier)
    (struct_block
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)))
        (logic_block
          (expression_statement
            (expression
              (object_field
                (identifier)
                (identifier))
              (operator)
              (expression
                (identifier))))
          (return_statement
            (expression
              (object_field
                (identifier)
                (identifier)))))))))
